# siga

./: .gitignore  .siga_pids  AGENTS.md  README.md  SETUP.md  docker-compose.yml  init.md  package.json  siga.sh
.context/changelog/: CHANGELOG_2026-02-01.md
.context/docs/: AI-GOVERNANCE.md  REPOMAP.md
apps/api/: .env.example  .gitignore  alembic.ini  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/siga/: __init__.py  config.py  main.py
apps/api/siga/db/: __init__.py  models.py
apps/api/siga/domains/: __init__.py
apps/api/siga/domains/iniciativas/: __init__.py  controller.py  service.py
apps/api/siga/domains/transparencia/: __init__.py  controller.py
apps/api/siga/logging/: __init__.py  logger.py
apps/web/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/web/src/: index.css  main.tsx
apps/web/src/app/: App.tsx
apps/web/src/app/components/: Layout.tsx
apps/web/src/app/components/__tests__/: Layout.test.tsx
apps/web/src/app/pages/: LandingPage.tsx  RelatorioDtiPage.tsx
apps/web/src/app/pages/__tests__/: LandingPage.test.tsx
apps/web/src/domains/iniciativas/: hooks.ts
apps/web/src/domains/iniciativas/components/: IniciativaDetail.tsx  IniciativasList.tsx
apps/web/src/domains/iniciativas/pages/: IniciativasPage.tsx
apps/web/src/domains/transparencia/: hooks.ts
apps/web/src/shared/api/: client.ts
docs/: alembic-setup.md  database-setup.md  siga-script.md
scripts/: clean.sh  quick-setup-postgres.sh  setup-postgres.sh
(+4 files in other folders)
